# clu-processors

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: labeler.yml
.github/workflows/: tests-and-docs.yml
docs/: 404.html  index.html  index.md  install.md  search.html  sitemap.xml
docs/api/python/lum/clu/: index.html
docs/api/python/lum/clu/odin/: highlighter.html  index.html  mention.html  serialization.html  synpath.html
docs/api/python/lum/clu/processors/: directed_graph.html  document.html  index.html  (+3 more)
docs/authors/: index.html
docs/coverage/: class_index.html  d_0cb16319ecd39c59___init___py.html  d_0cb16319ecd39c59_directed_graph_py.html  d_0cb16319ecd39c59_document_py.html  d_0cb16319ecd39c59_interval_py.html  d_0cb16319ecd39c59_sentence_py.html  d_0cb16319ecd39c59_utils_py.html  d_0d397f8e8406ab2e___init___py.html  d_0d397f8e8406ab2e_test_compact_deserialization_py.html  d_0d397f8e8406ab2e_utils_py.html  d_4d0662d673085db7___init___py.html  d_885227e7e58e568a___init___py.html  d_885227e7e58e568a_test_merge_documents_py.html  d_885227e7e58e568a_utils_py.html  d_d5a334b921cb57d3___init___py.html  d_d5a334b921cb57d3_highlighter_py.html  d_d5a334b921cb57d3_mention_py.html  d_d5a334b921cb57d3_serialization_py.html  d_d5a334b921cb57d3_synpath_py.html  function_index.html  index.html  status.json  z_0cb16319ecd39c59___init___py.html  z_0cb16319ecd39c59_directed_graph_py.html  z_0cb16319ecd39c59_document_py.html  z_0cb16319ecd39c59_interval_py.html  z_0cb16319ecd39c59_sentence_py.html  z_0cb16319ecd39c59_utils_py.html  z_0d397f8e8406ab2e___init___py.html  z_0d397f8e8406ab2e_test_compact_deserialization_py.html  z_0d397f8e8406ab2e_utils_py.html  z_4d0662d673085db7___init___py.html  z_885227e7e58e568a___init___py.html  z_885227e7e58e568a_test_merge_documents_py.html  z_885227e7e58e568a_utils_py.html  z_d5a334b921cb57d3___init___py.html  z_d5a334b921cb57d3_highlighter_py.html  z_d5a334b921cb57d3_mention_py.html  z_d5a334b921cb57d3_serialization_py.html  z_d5a334b921cb57d3_synpath_py.html
docs/dev/: documentation.md  install.md  test.md
docs/dev/developing/: index.html
docs/dev/documentation/: index.html
docs/dev/faq/: index.html
docs/dev/install/: index.html
docs/dev/test/: index.html
docs/install/: index.html
docs/search/: search_index.json
python/lum/clu/odin/: highlighter.py  mention.py  serialization.py  synpath.py
python/lum/clu/odin/tests/: test_compact_deserialization.py  utils.py
python/lum/clu/processors/: directed_graph.py  document.py  interval.py  sentence.py  utils.py
python/lum/clu/processors/tests/: test_merge_documents.py  utils.py
(+53 files in other folders)
